--- a/index.html
+++ b/index.html
@@ -704,8 +704,8 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3404.7239336639514!2d74.35817801215072!3d31.42173135189973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s132-133%20Ammar%20Block%2C%20Nishter%20Colony%2C%20Lahore!5e0!3m2!1sen!2s!4v1740125165223!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           </div>
           </div>
 
           <div class="col-lg-7">
